--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "Frontend/package.json",
+      "src": "frontend/package.json",
       "use": "@vercel/static-build",
       "config": {
         "distDir": "frontend/build"
@@ -15,12 +15,12 @@
   ],
   "routes": [
     {
-      "src": "/api/v1/(.*)",
-      "dest": "backend/$1"
+      "src": "/api/(.*)",
+      "dest": "/backend/$1"
     },
     {
       "src": "/(.*)",
-      "dest": "frontend/$1"
+      "dest": "/frontend/$1"
     }
   ]
 }
