--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,15 +1,20 @@
 {
+    "installcommand" : "npm install --legacy-peer-deps",
     "version": 2,
     "builds": [
       {
-        "src": "package.json",
+        "src": "server.js",
         "use": "@vercel/node"
+      },
+      {
+        "src": "src/**/*",
+        "use": "@vercel/static"
       }
     ],
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "/$1"
+        "dest": "/"
       }
     ]
   }
