--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
     "node": "20.x"
   },
  "scripts": {
+  "postinstall": "npm install --legacy-peer-deps",
   "start": "node server.js"
   },
   "author": "Arifish",
