--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,7 @@
     "node": "20.x"
   },
  "scripts": {
-  "start": "yarn run server",
-  "build": "yarn run build"
+  "start": "yarn run server"
   },
   "author": "Arifish",
   "license": "MIT",
