--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
     "node": "20.x"
   },
  "scripts": {
-  "start": "yarn run server"
+  "start": "node server.js"
   },
   "author": "Arifish",
   "license": "MIT",
