create course and course backand updated

--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -23,5 +23,14 @@ APP_PASSWORD: qcrx flkl tzbf gjuy
 MASTER_PASS = Arifish@0107$$
 
 CREATE_BATCH =101
-GET_ALL_BATCH =103
+GET_ALL_BATCH =102
+DELETE_BATCH =103
+EDIT_BATCH =104
+
+CREATE_COURSE =201
+GET_ALL_COURSE =202
+DELETE_COURSE =203
+EDIT_COURSE =204
+
+
 NODE_ENV=development
