--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -34,3 +34,12 @@ EDIT_COURSE =204
 
 
 NODE_ENV=development
+
+i HAVE TO ADD
+
+GET_ALL_STUDENTS =301
+GET_ALL_PENDING_STUDENTS =302
+GET_ALL_APPROVED_STUDENTS =303
+GET_ALL_REJECTED_STUDENTS =304
+GET_ALL_BATCH_STUDENTS =305
+APPROVE_STUDENT =306
