base url added in enviromen2

--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -33,9 +33,7 @@ DELETE_COURSE =203
 EDIT_COURSE =204
 
 
-NODE_ENV=development
-
-i HAVE TO ADD
+NODE_ENV=production
 
 GET_ALL_STUDENTS =301
 GET_ALL_PENDING_STUDENTS =302
@@ -43,3 +41,5 @@ GET_ALL_APPROVED_STUDENTS =303
 GET_ALL_REJECTED_STUDENTS =304
 GET_ALL_BATCH_STUDENTS =305
 APPROVE_STUDENT =306
+
+i HAVE TO ADD
