--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -12,7 +12,8 @@
       "dest": "server.js"
     }
   ],
-  "cron": {
+  
+  "crons": {
     "jobs": [
       {
         "path": "/api/v1/cron-birthday-notification",
