send sms function updated

--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -43,3 +43,5 @@ GET_ALL_BATCH_STUDENTS =305
 APPROVE_STUDENT =306
 
 i HAVE TO ADD
+UPSTASH_REDIS_REST_URL=<your-redis-rest-url>
+UPSTASH_REDIS_AUTH_TOKEN=<your-redis-auth-token>
