--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-icons": "^5.3.0",
     "react-redux": "^9.0.1",
     "react-router-dom": "^6.20.1",
     "react-scripts": "^5.0.1",
@@ -59,4 +60,3 @@
     ]
   }
 }
-
