reject feture created

--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -41,6 +41,8 @@ GET_ALL_APPROVED_STUDENTS =303
 GET_ALL_REJECTED_STUDENTS =304
 GET_ALL_BATCH_STUDENTS =305
 APPROVE_STUDENT =306
+i HAVE TO ADD
+REJECT_STUDENT =307
 
 i HAVE TO ADD
 UPSTASH_REDIS_REST_URL=<your-redis-rest-url>
