create exam frontend and backend ready

--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -44,5 +44,7 @@ APPROVE_STUDENT =306
 REJECT_STUDENT =307
 
 i HAVE TO ADD
+CREATE_EXAM = 401
+
 UPSTASH_REDIS_REST_URL=<your-redis-rest-url>
 UPSTASH_REDIS_AUTH_TOKEN=<your-redis-auth-token>
