getAllExamBatchWise api ready

--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -45,6 +45,8 @@ REJECT_STUDENT =307
 
 i HAVE TO ADD
 CREATE_EXAM = 401
+GET_ALL_EXAM_BATCH_WISE = 402
+
 
 UPSTASH_REDIS_REST_URL=<your-redis-rest-url>
 UPSTASH_REDIS_AUTH_TOKEN=<your-redis-auth-token>
