marks input section is ready for test

--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -46,6 +46,7 @@ REJECT_STUDENT =307
 i HAVE TO ADD
 CREATE_EXAM = 401
 GET_ALL_EXAM_BATCH_WISE = 402
+MARKS_INPUT_BATCH_WISE = 403
 
 
 UPSTASH_REDIS_REST_URL=<your-redis-rest-url>
