--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.8.2",
     "bootstrap": "^5.3.2",
     "cloudinary": "^1.41.0",
+    "jspdf-autotable": "^5.0.2",
     "rc-tooltip": "^6.1.2",
     "react": "^18.2.0",
     "react-alert": "^7.0.3",
